--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -3,10 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_nav_graph"
-    app:startDestination="@id/mainActivity">
-    <activity
-        android:id="@+id/mainActivity"
-        android:name="com.example.pokeapp.MainActivity"
+    app:startDestination="@id/logeoFragment2">
+    <fragment
+        android:id="@+id/logeoFragment2"
+        android:name="com.example.pokeapp.fragments.LogeoFragment"
         android:label="fragment_logeo"
-        tools:layout="@layout/fragment_logeo" />
+        tools:layout="@layout/fragment_logeo" >
+        <action
+            android:id="@+id/action_logeoFragment2_to_homeFragment2"
+            app:destination="@id/homeFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/homeFragment2"
+        android:name="com.example.pokeapp.fragments.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" />
 </navigation>
