--- a/app/src/main/res/layout/fragment_logeo.xml
+++ b/app/src/main/res/layout/fragment_logeo.xml
@@ -32,6 +32,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/entrenador"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/entrenador" />
