--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -23,7 +23,7 @@
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <argument
-            android:name="email"
-            app:argType="string" />
+            android:name="user"
+            app:argType="com.example.pokeapp.models.User" />
     </fragment>
 </navigation>
