--- a/app/src/main/res/layout/pokemon_cell.xml
+++ b/app/src/main/res/layout/pokemon_cell.xml
@@ -28,6 +28,19 @@
         android:layout_marginEnd="16dp"
         tools:text="Jennilyn Rojas Chaves"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/nextArrow"
         app:layout_constraintStart_toEndOf="@+id/pokemonImageView"
         app:layout_constraintTop_toTopOf="@+id/pokemonImageView" />
+
+    <ImageView
+        android:id="@+id/nextArrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/nameTextView"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription"
+        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
