--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -9,6 +9,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/detailTextVew"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/hello_blank_fragment"
