--- a/app/src/main/res/layout/pokemon_cell.xml
+++ b/app/src/main/res/layout/pokemon_cell.xml
@@ -37,10 +37,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        tools:srcCompat="@drawable/ic_baseline_star_outline_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/nameTextView"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription"
-        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"/>
+        app:layout_constraintVertical_bias="0.17000002"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/nextArrodw"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/nameTextView"
+        app:layout_constraintTop_toBottomOf="@+id/nextArrow"
+        tools:ignore="ContentDescription" />
 </androidx.constraintlayout.widget.ConstraintLayout>
