--- a/app/src/main/res/layout/pokemon_cell.xml
+++ b/app/src/main/res/layout/pokemon_cell.xml
@@ -34,8 +34,8 @@
 
     <ImageView
         android:id="@+id/star"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="16dp"
         tools:srcCompat="@drawable/ic_baseline_star_outline_24"
         app:layout_constraintBottom_toBottomOf="parent"
