--- a/app/src/main/res/layout/pokemon_favorito_cell.xml
+++ b/app/src/main/res/layout/pokemon_favorito_cell.xml
@@ -12,6 +12,7 @@
         android:layout_height="100dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,6 +23,7 @@
         android:id="@+id/textViewNameFav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         tools:text="TextView"
@@ -34,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:text="@string/heightPoke"
         app:layout_constraintStart_toEndOf="@+id/imagefavPoke"
         app:layout_constraintTop_toBottomOf="@+id/textViewNameFav" />
@@ -43,6 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         tools:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="@+id/textView2" />
@@ -51,6 +55,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:text="@string/weightPoke"
@@ -62,6 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:layout_marginTop="16dp"
         tools:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/textView4"
