--- a/app/src/main/res/layout/pokemon_favorito_cell.xml
+++ b/app/src/main/res/layout/pokemon_favorito_cell.xml
@@ -23,6 +23,7 @@
         android:id="@+id/textViewNameFav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#191970"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
@@ -36,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
+        android:textColor="#191970"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:text="@string/heightPoke"
         app:layout_constraintStart_toEndOf="@+id/imagefavPoke"
@@ -55,6 +57,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#191970"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
