--- a/app/src/main/res/layout/pokemon_cell.xml
+++ b/app/src/main/res/layout/pokemon_cell.xml
@@ -24,6 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:textColor="#191970"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:layout_marginEnd="16dp"
         tools:text="Jennilyn Rojas Chaves"
